--- a/app/components/Pagina.css
+++ b/app/components/Pagina.css
@@ -15,7 +15,7 @@
 }
 
 .stopButton {
-  background-color: orangered;
+  background-color: lightcoral;
 }
 
 .bottoniFondoPagina {
@@ -23,4 +23,8 @@
   width: 100px;
   height: 75px;
   margin-left: 20px;
+}
+
+.bottoniFondoPagina a:hover {
+  color: white;
 }
