--- a/app/app.global.css
+++ b/app/app.global.css
@@ -161,3 +161,15 @@ Form {
   border: 1px solid #f0f0f0;
   border-radius: 5px;
 }
+
+.go-back-link {
+  position: absolute;
+  left: 15px;
+  top: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+  .ReactTable .rt-th, .ReactTable .rt-td {
+    padding: 2px 5px;
+  }
+}
