--- a/app/app.global.css
+++ b/app/app.global.css
@@ -64,6 +64,23 @@ Form {
   position: relative;
 }
 
+svg.loading-spin {
+  animation-name: spin;
+  animation-duration: 2000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
 
 
 .react-calendar {
