--- a/app/app.global.css
+++ b/app/app.global.css
@@ -211,3 +211,11 @@ svg.loading-spin {
     padding: 2px 5px;
   }
 }
+
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    font-size: 2.3rem;
+  }
+
+}
