--- a/app/components/Pagina.css
+++ b/app/components/Pagina.css
@@ -19,11 +19,16 @@
   background-color: lightcoral;
 }
 
-.bottoniFondoPagina {
+.bottoniFondoPagina, .bottoniFondoPaginaLink {
   background-color: #4CAF50;
   width: 100px;
   height: 75px;
   margin: 20px;
+}
+
+.bottoniFondoPaginaLink {
+  opacity: 1;
+  line-height: 57px!important;
 }
 
 .bottoniFondoPagina a:hover {
@@ -45,3 +50,27 @@
   margin-bottom: 20px;
 }
 
+
+@media screen and (max-width: 1024px) {
+  .startStop {
+    width: 75px;
+    height: 75px;
+    padding: 15px;
+    font-size: 14px;
+    margin-bottom: 14px;
+  }
+
+  .titoloApp {
+    width: 92%;
+  }
+
+  .bottoniFondoPagina, .bottoniFondoPaginaLink {
+    width: 80px;
+    height: 45px;
+    margin: 15px;
+  }
+
+  .bottoniFondoPaginaLink {
+    line-height: 30px!important;
+  }
+}
