--- a/app/components/PaginaNew.css
+++ b/app/components/PaginaNew.css
@@ -20,3 +20,12 @@
   height: 200px;
 }
 
+@media screen and (max-width: 1024px) {
+  .bottonePercentuale {
+    padding: 10px;
+    width: 100px;
+    height: 100px;
+    font-size: 25px;
+    line-height:75px;
+  }
+}
