adding information to include new "certificate" for print

--- a/app/print.css
+++ b/app/print.css
@@ -1,7 +1,7 @@
 body {
   background-repeat: no-repeat;
   height: 900px;
-  background-image: url("../resources/template_pdf.jpg");
+  background-image: url("../resources/Elegant_Vintage_Classic_General_Certificate.jpg");
   width: 695px;
 }
 
